ansible: Use the new location for certificates
Certificates are now created at {{ workdir }}

Fixes #1091

Signed-off-by: Alberto Murillo Silva <alberto.murillo.silva@intel.com>

--- a/_DeploymentAndDistroPackaging/ansible/roles/ciao-common/vars/Clear.yml
+++ b/_DeploymentAndDistroPackaging/ansible/roles/ciao-common/vars/Clear.yml
@@ -20,3 +20,7 @@ controller_deps:
 
 launcher_deps:
   - cloud-control
+
+keystone_cert: /etc/ssl/certs/keystone_cert.pem
+cacert_prog: None
+cacert_creates: /etc/ssl/certs/keystone_cert.pem
