--- a/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/tasks/create_cnci_image.yml
+++ b/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/tasks/create_cnci_image.yml
@@ -15,7 +15,7 @@
 
   - name: Check if cnci image is already setup
     become: no
-    stat: path=images/.cnci_ready
+    stat: path={{ workdir }}/.cnci_ready
     register: st
     changed_when: False
 
@@ -23,20 +23,20 @@
     become: no
     get_url:
       url: "{{ cnci_image_url }}"
-      dest: images/{{ cnci_image }}.xz
+      dest: "{{ workdir }}/{{ cnci_image }}.xz"
       validate_certs: no
     register: download_cnci
 
   - name: Remove old cnci image
     become: no
-    file: path=images/{{ cnci_image }} state=absent
+    file: path={{ workdir }}/{{ cnci_image }} state=absent
     when: download_cnci.changed or not st.stat.exists
 
   - name: Decompress cnci image
     become: no
     command: unxz -k {{ cnci_image }}.xz
     args:
-      chdir: images
+      chdir: "{{ workdir }}"
       creates: "{{ cnci_image }}"
     register: decompress_cnci
 
@@ -46,7 +46,7 @@
       register: loop_device
 
     - name: Mount cnci image on loop
-      command: "losetup {{ loop_device.stdout }} -P images/{{ cnci_image }}"
+      command: "losetup {{ loop_device.stdout }} -P {{ workdir }}/{{ cnci_image }}"
 
     - name: Mounting cnci image in /mnt/tmp
       mount:
@@ -91,7 +91,7 @@
     - name: Detach cnci image from loop device
       command: "losetup -d {{ loop_device.stdout }}"
 
-    - name: Creating images/.cnci_ready
+    - name: Creating .cnci_ready
       become: no
-      file: path=images/.cnci_ready state=touch
+      file: path={{ workdir }}/.cnci_ready state=touch
     when: decompress_cnci.changed
