--- a/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/tasks/upload_images.yml
+++ b/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/tasks/upload_images.yml
@@ -27,7 +27,7 @@
       CIAO_CA_CERT_FILE: "{{ workdir }}/keystone_cert.pem"
 
   - name: Upload {{ image.name }}
-    shell: "{{ gopath }}/bin/ciao-cli image add --file images/{{ image.file }} --name {{ image.name }} --id {{ image.id }}"
+    shell: "{{ gopath }}/bin/ciao-cli image add --file {{ workdir }}/{{ image.file }} --name {{ image.name }} --id {{ image.id }}"
     environment:
       CIAO_CONTROLLER: "{{ keystone_fqdn }}"
       CIAO_IDENTITY: "https://{{ keystone_fqdn }}:35357"
