--- a/_DeploymentAndDistroPackaging/ansible/roles/ciao-launcher/tasks/install.yml
+++ b/_DeploymentAndDistroPackaging/ansible/roles/ciao-launcher/tasks/install.yml
@@ -38,4 +38,4 @@
     notify: restart launcher
 
   - name: Copy OVMF firmware
-    copy: src=images/OVMF.fd dest=/usr/share/qemu/OVMF.fd
+    copy: src={{ workdir }}/OVMF.fd dest=/usr/share/qemu/OVMF.fd owner=root mode=644
