ansible: Move firmware_image_url variable from controller to launcher
The ovmf firmware is only required by the launcher nodes so it makes more sense
to keep it in ciao-launcher role.

Signed-off-by: Alberto Murillo Silva <alberto.murillo.silva@intel.com>

--- a/_DeploymentAndDistroPackaging/ansible/roles/ciao-launcher/tasks/install.yml
+++ b/_DeploymentAndDistroPackaging/ansible/roles/ciao-launcher/tasks/install.yml
@@ -37,5 +37,15 @@
       - "{{ agent_key }}"
     notify: restart launcher
 
+  - name: Get OVMF firmware
+    become: no
+    connection: local
+    get_url:
+      url: "{{ firmware_image_url }}"
+      dest: "{{ workdir }}/OVMF.fd"
+      validate_certs: no
+      force: no
+
+
   - name: Copy OVMF firmware
     copy: src={{ workdir }}/OVMF.fd dest=/usr/share/qemu/OVMF.fd owner=root mode=644
