--- a/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/tasks/certificates.yml
+++ b/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/tasks/certificates.yml
@@ -29,6 +29,11 @@
       chdir: certificates/ciao
       creates: CAcert-{{ ciao_controller_fqdn }}.pem
 
+  - name: Clean dual_agent_keys if there are no dual_nodes
+    set_fact:
+      dual_agent_keys: [ ]
+    when: not dual_nodes
+
   - name: Create agent keys
     become: no
     connection: local
@@ -39,15 +44,7 @@
     args:
       chdir: certificates/ciao
       creates: "{{ item.creates }}"
-    with_items:
-      - role: agent
-        creates: cert-CNAgent-localhost.pem
-      - role: netagent
-        creates: cert-NetworkingAgent-localhost.pem
-      - role: cnciagent
-        creates: cert-CNCIAgent-localhost.pem
-      - role: controller
-        creates: cert-Controller-localhost.pem
+    with_items: "{{ agent_keys + dual_agent_keys }}"
 
   - name: Copy certificates
     copy: src=certificates/{{ item }} dest=/etc/pki/{{ item }}
