ansible: Fix cleanup to correctly remove local files
Since cleanup script is run from cleanup/ciao.yml the path
for local files to remove should be ../path rather than ./path

Fixes #1171

Signed-off-by: Alberto Murillo Silva <alberto.murillo.silva@intel.com>

--- a/_DeploymentAndDistroPackaging/ansible/cleanup/ciao.yml
+++ b/_DeploymentAndDistroPackaging/ansible/cleanup/ciao.yml
@@ -17,15 +17,15 @@
   connection: local
   tasks:
     - name: Remove local files
-      local_action: file path={{ item }} state=absent
+      file: path={{ item }} state=absent
       with_items:
-        - ./openrc
-        - ./admin-ciaorc
-        - ./demo-ciaorc
-        - ./clouds.yaml
-        - ./certificates
-        - ./images/.cnci_ready
-        - ./fetch
+        - ../openrc
+        - ../admin-ciaorc
+        - ../demo-ciaorc
+        - ../clouds.yaml
+        - ../certificates
+        - ../images/.cnci_ready
+        - ../fetch
         - /tmp/go
 
 - hosts: controllers
