ansible: Add environment source file for BAT testing
This environment source file merges the admin and demo versions and
creates one suitable for running BAT with.

Signed-off-by: Rob Bradford <robert.bradford@intel.com>

--- a/_DeploymentAndDistroPackaging/ansible/cleanup/ciao.yml
+++ b/_DeploymentAndDistroPackaging/ansible/cleanup/ciao.yml
@@ -22,6 +22,7 @@
         - ../openrc
         - ../admin-ciaorc
         - ../demo-ciaorc
+        - ../bat-ciaorc
         - ../clouds.yaml
         - ../certificates
         - ../images/.cnci_ready
