--- a/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/tasks/main.yml
+++ b/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/tasks/main.yml
@@ -48,6 +48,7 @@
     with_items:
       - admin-ciaorc
       - demo-ciaorc
+      - bat-ciaorc
 
   # TODO: (albertom) os_image module should be used as soon as ciao-image
   # is compatible with shade
