--- a/_DeploymentAndDistroPackaging/ansible/cleanup/ciao.yml
+++ b/_DeploymentAndDistroPackaging/ansible/cleanup/ciao.yml
@@ -28,6 +28,30 @@
         - ../fetch
         - /tmp/go
 
+- hosts: computes:networks
+  become: yes
+  tasks:
+    - name: Stop services
+      systemd: name={{ item }} enabled=no state=stopped
+      with_items:
+        - ciao-network.service
+        - ciao-compute.service
+        - ciao-launcher.service
+        - docker.service
+        - docker-cor.service
+      ignore_errors: yes
+
+    - name: Run ciao-launcher -hard-reset
+      command: /usr/local/bin/ciao-launcher -hard-reset
+      ignore_errors: yes
+
+    - name: Remove CIAO Service files
+      file: name={{ item }} state=absent
+      with_items:
+        - /etc/systemd/system/ciao-network.service
+        - /etc/systemd/system/ciao-compute.service
+        - /etc/systemd/system/ciao-launcher.service
+
 - hosts: controllers
   become: yes
   tasks:
@@ -45,6 +69,8 @@
         - docker-ciao-webui.service
         - ciao-controller.service
         - ciao-scheduler.service
+        - docker.service
+        - docker-cor.service
       ignore_errors: yes
 
     - name: Remove Files
@@ -61,23 +87,6 @@
 - hosts: controllers:computes:networks
   become: yes
   tasks:
-    - name: Stop services
-      systemd: name={{ item }} enabled=no state=stopped
-      with_items:
-        - ciao-network.service
-        - ciao-compute.service
-        - ciao-launcher.service
-        - docker.service
-        - docker-cor.service
-      ignore_errors: yes
-
-    - name: Remove CIAO Service files
-      file: name={{ item }} state=absent
-      with_items:
-        - /etc/systemd/system/ciao-network.service
-        - /etc/systemd/system/ciao-compute.service
-        - /etc/systemd/system/ciao-launcher.service
-
     - name: Remove CIAO files
       file: path={{ item }} state=absent
       with_items:
