--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ matrix:
 go_import_path: github.com/01org/ciao
 
 before_install:
+  - sudo apt-get update -qq
   - sudo apt-get install dnsmasq-base
   - go get github.com/mattn/goveralls
   - go get golang.org/x/tools/cmd/cover
