ansible: setup 0600 mode for the /etc/ciao/configuration.yaml file
Previous to this change, deployments of CIAO using ansible would
setup /etc/ciao/configuration.yaml with the default permissions, which
is undesired for this specific file.

Signed-off-by: Simental Magana, Marcos <marcos.simental.magana@intel.com>

--- a/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/tasks/startservices.yml
+++ b/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/tasks/startservices.yml
@@ -27,7 +27,7 @@
     file: path=/etc/ciao state=directory owner=ciao group=ciao
 
   - name: Create configuration file
-    template: dest=/etc/ciao/configuration.yaml src=configuration.yaml.j2 owner=ciao group=ciao
+    template: dest=/etc/ciao/configuration.yaml src=configuration.yaml.j2 owner=ciao group=ciao mode=0600
 
   - meta: flush_handlers
 
