--- a/_DeploymentAndDistroPackaging/ansible/roles/ciao-common/tasks/ceph.yml
+++ b/_DeploymentAndDistroPackaging/ansible/roles/ciao-common/tasks/ceph.yml
@@ -14,10 +14,10 @@
 # limitations under the License.
 
   - name: Create /etc/ceph directory
-    file: path=/etc/ceph state=directory mode=0600
+    file: path=/etc/ceph state=directory owner=ciao mode=0700
 
   - name: Copy ceph files
-    copy: src=ceph/{{ item }} dest=/etc/ceph/{{ item }} mode=0400
+    copy: src=ceph/{{ item }} dest=/etc/ceph/{{ item }} owner=ciao mode=0400
     with_items:
       - ceph.conf
       - "ceph.client.{{ cephx_user }}.keyring"
