ansible: Cleanup ciao files from /tmp
ciao-controller creates files in /tmp for its use.
If ciao has been run previously as the root user, it is probably
that the ciao files in /tmp are owned by root, causing the
ciao-launcher service to fail at start when launched as the ciao user

This commit includes the removal of ciao files on /tmp in the cleanup
scripts

Signed-off-by: Alberto Murillo Silva <alberto.murillo.silva@intel.com>

--- a/_DeploymentAndDistroPackaging/ansible/cleanup/ciao.yml
+++ b/_DeploymentAndDistroPackaging/ansible/cleanup/ciao.yml
@@ -141,6 +141,10 @@
         - /etc/pki/ciao
         - /etc/pki/keystone
         - /var/lib/ciao
+        - /tmp/lock/ciao
+        - /tmp/ciao-controller-stats.db
+        - /tmp/ciao-controller-stats.db-shm
+        - /tmp/ciao-controller-stats.db-wal
         # ClearLinux cers
         - /etc/ssl/certs/keystone_cert.pem
         # Ubuntu certs
