ansible: Create ceph role
Introduce ceph_config variable which behaves acordingly to the
following values.

- none: Ceph is already configured and ansible will not setup ceph
- container: Ansible will deploy ceph/demo container on the controller
             node and configure the rest of the nodes to use it.
- files: An existing ceph cluster exists and ansible will configure all
         nodes using the existing ceph configuratino and authentication
         files found in ceph_config_dir variable.

Fixes #1084

Signed-off-by: Alberto Murillo Silva <alberto.murillo.silva@intel.com>

--- a/_DeploymentAndDistroPackaging/ansible/cleanup/ciao.yml
+++ b/_DeploymentAndDistroPackaging/ansible/cleanup/ciao.yml
@@ -108,6 +108,7 @@
       with_items:
         - ciao-webui
         - ciao-keystone
+        - ceph-demo
 
     - name: Stop and disable services
       systemd: name={{ item }} state=stopped enabled=no
