--- a/_DeploymentAndDistroPackaging/ansible/roles/ceph/vars/Clear.yml
+++ b/_DeploymentAndDistroPackaging/ansible/roles/ceph/vars/Clear.yml
@@ -1,5 +1,5 @@
 ---
-# Copyright (c) 2016 Intel Corporation
+# Copyright (c) 2017 Intel Corporation
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -13,11 +13,5 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-  - name: Create /etc/ceph directory
-    file: path=/etc/ceph state=directory owner=ciao mode=0700
-
-  - name: Copy ceph files
-    copy: src=ceph/{{ item }} dest=/etc/ceph/{{ item }} owner=ciao mode=0400
-    with_items:
-      - ceph.conf
-      - "ceph.client.{{ cephx_user }}.keyring"
+ceph_package:
+  - storage-cluster
