ansible: Update docker role to install docker-ce
docker-engine has been renamed to docker-ce

Fixes #1223

Signed-off-by: Alberto Murillo Silva <alberto.murillo.silva@intel.com>

--- a/_DeploymentAndDistroPackaging/ansible/cleanup/ciao.yml
+++ b/_DeploymentAndDistroPackaging/ansible/cleanup/ciao.yml
@@ -183,6 +183,8 @@
             - qemu-system-x86
             - psmisc
             - docker-engine
+            - docker-ce
+            - docker
             - ciao-common
 
         - name: Uninstall dependencies (Fedora)
@@ -196,6 +198,8 @@
         - qemu-system-x86
         - psmisc
         - docker.io
+        - docker-engine
+        - docker-ce
         - ciao-common
       when: ansible_os_family == "Debian"
 
