Deployment: use ubuntu keystone container
- Use ciaoproject/keystone container (Ubuntu 16.04, Ocata) instead
  of the clearlinux/keystone container.

Signed-off-by: Erick Cardona <erick.cardona.ruiz@intel.com>

--- a/_DeploymentAndDistroPackaging/ansible/roles/keystone/meta/main.yml
+++ b/_DeploymentAndDistroPackaging/ansible/roles/keystone/meta/main.yml
@@ -15,7 +15,7 @@
 
 galaxy_info:
   author: Alberto Murillo
-  description: This role installs clearlinux/keystone docker container
+  description: This role installs ciaoproject/keystone docker container
   company: Intel
 
   issue_tracker_url: https://github.com/clearlinux/ansible-role-keystone
