--- a/_DeploymentAndDistroPackaging/ansible/roles/keystone/tasks/startservices.yml
+++ b/_DeploymentAndDistroPackaging/ansible/roles/keystone/tasks/startservices.yml
@@ -25,7 +25,7 @@
   - name: Start keystone container
     docker_container:
       name: ciao-keystone
-      image: clearlinux/keystone:stable
+      image: ciaoproject/keystone
       state: started
       privileged: True
       etc_hosts: "{{ etc_hosts }}"
