Deployment: Revert changes to docker service in clearlinux.
- Due to recent changes in the clearlinux's containers-basic bundle
  the changes introduced in the commit https://github.com/01org/ciao/commit/3617ee31f378226fff6d00bf223a8dd65f3af158
  need to be reverted.

Signed-off-by: Erick Cardona <erick.cardona.ruiz@intel.com>

--- a/_DeploymentAndDistroPackaging/ansible/roles/docker/defaults/main.yml
+++ b/_DeploymentAndDistroPackaging/ansible/roles/docker/defaults/main.yml
@@ -13,17 +13,5 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-- include: install_ubuntu.yml
-  when: ansible_os_family == "Debian"
-  static: no
-
-- include: install_fedora.yml
-  when: ansible_os_family == "RedHat"
-  static: no
-
-- include: install_clearlinux.yml
-  when: ansible_os_family == "Clear linux software for intel architecture"
-  static: no
-
-- name: Start docker daemon
-  systemd: name={{ docker_service }} enabled=yes state=started
+# Name of docker service
+docker_service: docker.service
