--- a/testutil/ciao-down/workloads/clearcontainers.yaml
+++ b/testutil/ciao-down/workloads/clearcontainers.yaml
@@ -18,12 +18,6 @@ mounts:
 {{print "DEBIAN_FRONTEND=noninteractive DEBCONF_NONINTERACTIVE_SEEN=true " -}}
 {{end}}
 {{ define "GOPATH" }}{{with .GoPath}}{{$.MountPath "hostgo"}}{{else}}/home/{{.User}}/go{{end}}{{end}}
-{{- define "CHECK" -}}
-if [ $? -eq 0 ] ; then ret="OK" ; else ret="FAIL" ; fi ; curl -X PUT -d $ret 10.0.2.2:{{.HTTPServerPort -}}
-{{end -}}
-{{- define "OK" -}}
-curl -X PUT -d "OK" 10.0.2.2:{{.HTTPServerPort -}}
-{{end -}}
 #cloud-config
 mounts:
 {{range .Mounts}} - [{{.Tag}}, {{.Path}}, 9p, "x-systemd.automount,x-systemd.device-timeout=10,nofail,trans=virtio,version=9p2000.L", "0", "0"]
@@ -32,7 +26,7 @@ write_files:
 {{- if len $.HTTPProxy }}
  - content: |
      [Service]
-     Environment="HTTP_PROXY={{$.HTTPProxy}}"{{if len .HTTPSProxy}} "HTTPS_PROXY={{.HTTPSProxy}}{{end}}"{{if len .NoProxy}} "NO_PROXY={{.NoProxy}},singlevm{{end}}"
+     Environment="HTTP_PROXY={{$.HTTPProxy}}"{{if len .HTTPSProxy}} "HTTPS_PROXY={{.HTTPSProxy}}{{end}}"{{if len .NoProxy}} "NO_PROXY={{.NoProxy}},{{.Hostname}}{{end}}"
    path: /etc/systemd/system/docker.service.d/http-proxy.conf
 {{- end}}
  - content: |
@@ -71,13 +65,15 @@ apt:
 package_upgrade: true
 
 runcmd:
- - echo "127.0.0.1 singlevm" >> /etc/hosts
+ - echo "127.0.0.1 {{.Hostname}}" >> /etc/hosts
  - chown {{.User}}:{{.User}} /home/{{.User}}
  - rm /etc/update-motd.d/10-help-text /etc/update-motd.d/51-cloudguest
  - rm /etc/update-motd.d/90-updates-available
  - rm /etc/legal
- - curl -X PUT -d "Booting VM" 10.0.2.2:{{.HTTPServerPort}}
- - {{template "OK" .}}
+
+ - {{beginTask . "Booting VM"}}
+ - {{endTaskOk . }}
+
 {{if len $.HTTPProxy }}
  - echo "HTTP_PROXY=\"{{.HTTPProxy}}\"" >> /etc/environment
  - echo "http_proxy=\"{{.HTTPProxy}}\"" >> /etc/environment
@@ -87,104 +83,108 @@ runcmd:
  - echo "https_proxy=\"{{.HTTPSProxy}}\"" >> /etc/environment
 {{end}}
 {{- if or (len .HTTPSProxy) (len .HTTPProxy) }}
- - echo "no_proxy=\"{{if len .NoProxy}}{{.NoProxy}},{{end}}singlevm\""  >> /etc/environment
+ - echo "no_proxy=\"{{if len .NoProxy}}{{.NoProxy}},{{end}}{{.Hostname}}\""  >> /etc/environment
 {{end}}
 
  - echo "GOPATH=\"{{template "GOPATH" .}}\"" >> /etc/environment
  - echo "PATH=\"$PATH:/usr/local/go/bin:{{template "GOPATH" .}}/bin:/usr/local/nodejs/bin\""  >> /etc/environment
 
- - curl -X PUT -d "Downloading Go" 10.0.2.2:{{.HTTPServerPort}}
+ - {{beginTask . "Downloading Go" }}
  - {{download . "https://storage.googleapis.com/golang/go1.7.4.linux-amd64.tar.gz" "/tmp/go1.7.4.linux-amd64.tar.gz"}}
- - {{template "CHECK" .}}
- - curl -X PUT -d "Unpacking Go" 10.0.2.2:{{.HTTPServerPort}}
+ - {{endTaskCheck .}}
+
+ - {{beginTask . "Unpacking Go" }}
  - tar -C /usr/local -xzf /tmp/go1.7.4.linux-amd64.tar.gz
- - {{template "CHECK" .}}
+ - {{endTaskCheck .}}
+ 
  - rm /tmp/go1.7.4.linux-amd64.tar.gz
 
  - groupadd docker
  - sudo gpasswd -a {{.User}} docker
- - curl -X PUT -d "Installing apt-transport-https and ca-certificates" 10.0.2.2:{{.HTTPServerPort}}
+
+ - {{beginTask . "Installing apt-transport-https and ca-certificates" }}
  - {{template "ENV" .}}sudo apt-get -y install  apt-transport-https ca-certificates
- - {{template "CHECK" .}}
+ - {{endTaskCheck .}}
 
- - curl -X PUT -d "Add docker GPG key" 10.0.2.2:{{.HTTPServerPort}}
+ - {{beginTask . "Add docker GPG key" }}
  - {{template "ENV" .}}curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
- - {{template "CHECK" .}}
+ - {{endTaskCheck .}}
 
- - curl -X PUT -d "Adding docker repo" 10.0.2.2:{{.HTTPServerPort}}
+ - {{beginTask . "Adding docker repo"}}
  - {{template "ENV" .}} sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
+ - {{endTaskCheck .}}
 
- - curl -X PUT -d "Add Clear Containers OBS Repository " 10.0.2.2:{{.HTTPServerPort}}
+ - {{beginTask . "Add Clear Containers OBS Repository "}}
  - sudo sh -c "echo 'deb http://download.opensuse.org/repositories/home:/clearlinux:/preview:/clear-containers-2.1/xUbuntu_16.04/ /' >> /etc/apt/sources.list.d/cc-oci-runtime.list"
  - {{template "ENV" .}}curl -fsSL http://download.opensuse.org/repositories/home:clearlinux:preview:clear-containers-2.1/xUbuntu_16.04/Release.key | sudo apt-key add -
- - {{template "CHECK" .}}
+ - {{endTaskCheck .}}
 
- - curl -X PUT -d "Retrieving updated list of packages" 10.0.2.2:{{.HTTPServerPort}}
+ - {{beginTask . "Retrieving updated list of packages"}}
  - {{template "ENV" .}}sudo apt-get update
- - {{template "CHECK" .}}
+ - {{endTaskCheck .}}
 
- - curl -X PUT -d "Installing Clear Containers Runtime" 10.0.2.2:{{.HTTPServerPort}}
+ - {{beginTask . "Installing Clear Containers Runtime"}}
  - {{template "ENV" .}}sudo apt-get install cc-oci-runtime -y
- - {{template "CHECK" .}}
+ - {{endTaskCheck .}}
 
- - curl -X PUT -d "Installing Docker" 10.0.2.2:{{.HTTPServerPort}}
+ - {{beginTask . "Installing Docker"}}
  - {{template "ENV" .}}sudo apt-get install -y --allow-downgrades --allow-unauthenticated docker-engine=1.12.1-0~xenial
- - {{template "CHECK" .}}
+ - {{endTaskCheck .}}
 
-
- - curl -X PUT -d "Start Clear Containers Runtime" 10.0.2.2:{{.HTTPServerPort}}
+ - {{beginTask . "Start Clear Containers Runtime"}}
  - sudo systemctl daemon-reload
  - sudo systemctl restart docker
  - sudo systemctl enable cc-proxy.socket
  - sudo systemctl start cc-proxy.socket
- - {{template "CHECK" .}}
+ - {{endTaskCheck .}}
 
- - curl -X PUT -d "Installing GCC" 10.0.2.2:{{.HTTPServerPort}}
+ - {{beginTask . "Installing GCC"}}
  - {{template "ENV" .}}apt-get install gcc -y
- - {{template "CHECK" .}}
+ - {{endTaskCheck .}}
 
- - curl -X PUT -d "Installing Make" 10.0.2.2:{{.HTTPServerPort}}
+ - {{beginTask . "Installing Make"}}
  - {{template "ENV" .}}apt-get install make -y
- - {{template "CHECK" .}}
+ - {{endTaskCheck .}}
 
- - curl -X PUT -d "Installing QEMU" 10.0.2.2:{{.HTTPServerPort}}
+ - {{beginTask . "Installing QEMU" }}
  - {{template "ENV" .}}apt-get install qemu-system-x86 -y
- - {{template "CHECK" .}}
+ - {{endTaskCheck .}}
 
- - curl -X PUT -d "Installing xorriso" 10.0.2.2:{{.HTTPServerPort}}
+ - {{beginTask . "Installing xorriso"}}
  - {{template "ENV" .}}apt-get install xorriso -y
- - {{template "CHECK" .}}
+ - {{endTaskCheck .}}
 
- - curl -X PUT -d "Installing Clear Containers development tools" 10.0.2.2:{{.HTTPServerPort}}
+ - {{beginTask . "Installing Clear Containers development tools"}}
  - {{template "ENV" .}}apt-get install build-essential python zlib1g-dev libcap-ng-dev libglib2.0-dev libpixman-1-dev libattr1-dev libcap-dev autoconf libtool libjson-glib-dev uuid-dev check bats libdevmapper-dev file apt-utils wget valgrind lcov libmnl-dev cppcheck libtap-formatter-html-perl -y
- - {{template "CHECK" .}}
+ - {{endTaskCheck .}}
 
- - curl -X PUT -d "Auto removing unused development components" 10.0.2.2:{{.HTTPServerPort}}
+ - {{beginTask . "Auto removing unused development components"}}
  - {{template "ENV" .}}apt-get auto-remove -y
- - {{template "CHECK" .}}
+ - {{endTaskCheck .}}
 
- - curl -X PUT -d "Installing Go development utils" 10.0.2.2:{{.HTTPServerPort}}
+ - {{beginTask . "Installing Go development utils"}}
  - sudo -u {{.User}} {{template "ENV" .}} GOPATH={{template "GOPATH" .}} /usr/local/go/bin/go get github.com/mattn/goveralls golang.org/x/tools/cmd/cover github.com/pierrre/gotestcover github.com/fzipp/gocyclo github.com/gordonklaus/ineffassign github.com/golang/lint/golint github.com/client9/misspell/cmd/misspell github.com/01org/ciao/test-cases github.com/opencontainers/runc/libcontainer/configs
- - {{template "CHECK" .}}
+ - {{endTaskCheck .}}
 
  - chown {{.User}}:{{.User}} -R {{template "GOPATH" .}}
 
 {{if len .GitUserName}}
- - curl -X PUT -d "Setting git user.name" 10.0.2.2:{{.HTTPServerPort}}
+ - {{beginTask . "Setting git user.name"}}
  - sudo -u {{.User}} git config --global user.name "{{.GitUserName}}"
- - {{template "CHECK" .}}
-{{end}}
-{{if len .GitEmail}}
- - curl -X PUT -d "Setting git user.email" 10.0.2.2:{{.HTTPServerPort}}
- - sudo -u {{.User}} git config --global user.email {{.GitEmail}}
- - {{template "CHECK" .}}
+ - {{endTaskCheck .}}
 {{end}}
 
- - curl -X PUT -d "FINISHED" 10.0.2.2:{{.HTTPServerPort}}
+{{if len .GitEmail}}
+ - {{beginTask . "Setting git user.email"}}
+ - sudo -u {{.User}} git config --global user.email {{.GitEmail}}
+ - {{endTaskCheck .}}
+{{end}}
+
+ - {{finished .}}
 
 users:
   - name: {{.User}}
-    gecos: CIAO Demo User
+    gecos: CC Demo User
     lock-passwd: true
     shell: /bin/bash
     sudo: ALL=(ALL) NOPASSWD:ALL
