--- a/testutil/ciao-down/workloads/fedora25.yaml
+++ b/testutil/ciao-down/workloads/fedora25.yaml
@@ -22,8 +22,8 @@ write_files:
      proxy={{.}}
    path: /etc/dnf/dnf.conf
 {{end}}
-    
-package_upgrade: false
+
+package_upgrade: {{with .PackageUpgrade}}{{.}}{{else}}false{{end}}
 
 runcmd:
  - {{beginTask . "Booting VM"}}
