--- a/testutil/ciao-down/workloads/clearcontainers.yaml
+++ b/testutil/ciao-down/workloads/clearcontainers.yaml
@@ -66,7 +66,7 @@ apt:
 {{- if len $.HTTPSProxy }}
   https_proxy: "{{$.HTTPSProxy}}"
 {{- end}}
-package_upgrade: true
+package_upgrade: {{with .PackageUpgrade}}{{.}}{{else}}true{{end}}
 
 runcmd:
  - echo "127.0.0.1 {{.Hostname}}" >> /etc/hosts
