--- a/testutil/ciao-down/workloads/xenial.yaml
+++ b/testutil/ciao-down/workloads/xenial.yaml
@@ -33,7 +33,7 @@ apt:
 {{- if len $.HTTPSProxy }}
   https_proxy: "{{$.HTTPSProxy}}"
 {{- end}}
-package_upgrade: false
+package_upgrade: {{with .PackageUpgrade}}{{.}}{{else}}false{{end}}
 
 runcmd:
  - echo "127.0.0.1 {{.Hostname}}" >> /etc/hosts
